# StudyWatchdog

./: .gitignore  AGENTS.md  LICENSE  PKGBUILD  README.md  pyproject.toml
.github/: copilot-instructions.md
assets/: README.md
scripts/: test_detection.py  test_siglip.py
src/studywatchdog/: __init__.py  alerter.py  camera.py  config.py  decision.py  detector.py  main.py
tests/: test_decision.py  test_detector.py
