[project]
name = "studywatchdog"
version = "0.1.0"
description = "AI-powered study monitor that uses your webcam to detect if you're studying and nudges you back on track"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[project.scripts]
studywatchdog = "studywatchdog.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studywatchdog"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
